<resources>
    <string name="app_name">Codemash Companion</string>
    <string name="loading_all_of_the_fun_stuff">Loading all of the fun stuff...</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_about">About</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="speakers">Speakers</string>
    <string name="schedule">Schedule</string>
    <string name="speaker_detail">Speaker Detail</string>
    <string name="home">Home</string>
    <string name="sessions">Sessions</string>
    <string name="session_detail">Session Detail</string>
    <string name="rooms">Rooms</string>
    <string name="presented_by">Presented by:</string>
    <string name="oops">Oops!</string>
    <string name="no_data_message">Looks like we couldn\'t retrieve any data.</string>
    <string name="ok">OK</string>
    <string name="could_not_refresh">Couldn\'t refresh the data\nTry again later.</string>
    <string name="unexpected_error">An unexpected error occurred.</string>
    <string name="no_sessions">It looks like there isn\'t any data right now.\nPull down down to refresh.</string>
    <string name="empty_schedule">Such empty!\nCheck out this year\'s sessions and add a few to your schedule.</string>
    <string name="author_name">Jim Kirkbride</string>
    <string name="author_label">Author:</string>
    <string name="codemash_companion_url">https://github.com/jameskbride/codemash-companion</string>
    <string name="about_blurb">Thanks for downloading this app, and I hope you\'ve found it useful!\n\nFind a bug or think of a cool new feature? Create an issue on Github or email me at james.kirkbride@gmail.com.\n\nPull requests are also welcome!</string>
    <string name="creative_commons_license">The Android robot is reproduced or modified from work created and shared by Google and used according to terms described in the Creative Commons 3.0 Attribution License.</string>
    <string name="license_text">The MIT License (MIT)\n\nCopyright (c) 2018 James G Kirkbride\n\nPermission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.</string>
    <string name="license">License</string>
    <string name="version_label">Version:</string>
    <string name="map">Map</string>
    <string name="code_of_conduct">Code of Conduct</string>
    <string name="code_of_conduct_url">http://www.codemash.org/codemash-code-conduct</string>
    <string name="action_code_of_conduct">Code of Conduct</string>
</resources>
